syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "AuthProto";
package pos.proiect.auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
  rpc InvalidateToken (TokenRequest) returns (TokenResponse);
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetAllUsers (EmptyRequest) returns (GetAllUsersResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  string message = 1;
  bool isValid = 2;
}

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message RegisterUserResponse {
  string message = 1;
  bool success = 2;
}
message DeleteUserRequest {
  string email = 1;
}

message DeleteUserResponse {
  string message = 1;
  bool success = 2;
}

message GetUserRequest {
  string email = 1;
}

message GetUserResponse {
  string email = 1;
  string role = 2;
  bool found = 3;
}

message UpdateUserRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message UpdateUserResponse {
  string message = 1;
  bool success = 2;
}

message EmptyRequest {}

message GetAllUsersResponse {
  repeated User users = 1;
}

message User {
  string email = 1;
  string role = 2;
}